added threshold for the recognizer

--- a/new_recogs.ipynb
+++ b/new_recogs.ipynb
@@ -254,16 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 3s/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 59ms/step\n",
       "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 61ms/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 59ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 68ms/step\n"
      ]
     },
     {
@@ -645,10 +646,181 @@
        "          0.02245491, -0.00432537,  0.01518632,  0.04559937, -0.02100116,\n",
        "          0.05187345, -0.00024212,  0.06228003, -0.03135775, -0.01136881,\n",
        "         -0.00757923, -0.00942057,  0.00147281, -0.02884851, -0.03917755,\n",
-       "         -0.02170389,  0.00703597]], dtype=float32)}"
+       "         -0.02170389,  0.00703597]], dtype=float32),\n",
+       " 'Rizzal': array([[ 7.85614774e-02,  8.01287442e-02,  1.76083818e-02,\n",
+       "          2.65545119e-02,  1.39073608e-02, -3.53157744e-02,\n",
+       "         -3.13944332e-02,  4.94764047e-03, -1.98107120e-02,\n",
+       "          1.52193792e-02,  4.85149100e-02, -7.99563751e-02,\n",
+       "          2.62669259e-04,  1.54097090e-02,  6.32036254e-02,\n",
+       "         -4.59695682e-02,  3.41289863e-02,  4.49677184e-02,\n",
+       "         -4.12576348e-02,  7.61048794e-02,  2.77296044e-02,\n",
+       "          5.08619100e-02,  7.41383582e-02,  1.69900469e-02,\n",
+       "         -2.25207862e-02,  6.53143451e-02,  2.71975137e-02,\n",
+       "         -3.78558896e-02,  4.61412221e-02, -1.31623009e-02,\n",
+       "         -1.95809845e-02,  6.15812652e-02, -4.79286239e-02,\n",
+       "         -2.81926449e-02,  4.55526039e-02, -4.29021940e-02,\n",
+       "          1.32976267e-02, -1.04725212e-01,  8.22519213e-02,\n",
+       "         -6.35252073e-02, -2.62270160e-02,  2.02791411e-02,\n",
+       "          2.33993288e-02, -2.07190719e-02, -3.56928706e-02,\n",
+       "          1.75326634e-02, -2.46130563e-02,  3.57411355e-02,\n",
+       "         -7.26627186e-02,  2.40452159e-02, -1.26148295e-02,\n",
+       "         -6.65133074e-02, -2.55967695e-02,  1.89028550e-02,\n",
+       "         -2.59364881e-02, -6.02214113e-02, -8.13425612e-03,\n",
+       "         -5.74878193e-02,  1.78636312e-02,  1.83298588e-02,\n",
+       "         -1.34026185e-02,  9.12526622e-02, -5.44853471e-02,\n",
+       "          3.60925049e-02, -9.98735987e-03, -7.63376877e-02,\n",
+       "         -2.35828217e-02, -3.24661471e-02,  9.20970887e-02,\n",
+       "          3.49267386e-02,  3.17567326e-02,  4.55965474e-02,\n",
+       "         -2.33338345e-02,  3.33113745e-02, -3.35935540e-02,\n",
+       "         -2.68823523e-02, -2.73835324e-02, -7.12525398e-02,\n",
+       "         -2.85638925e-02, -7.46000418e-03,  1.29615188e-01,\n",
+       "          1.01626124e-02, -7.62086213e-02,  3.59392427e-02,\n",
+       "          3.73047702e-02, -2.59294803e-03,  9.30879265e-03,\n",
+       "          8.90160503e-04, -1.25125833e-02, -8.03257711e-03,\n",
+       "         -2.58487533e-03,  8.80995765e-03,  5.48162609e-02,\n",
+       "         -7.40019046e-03,  6.42643645e-02,  3.41166593e-02,\n",
+       "         -9.24227163e-02,  1.22007839e-02, -3.94049585e-02,\n",
+       "         -4.56157736e-02, -5.61559456e-04,  9.08723697e-02,\n",
+       "         -4.61717509e-02,  7.55133405e-02,  4.20200231e-05,\n",
+       "         -3.16004418e-02, -1.92517613e-03, -2.89140418e-02,\n",
+       "         -2.74173953e-02, -1.18055623e-02,  6.05777465e-02,\n",
+       "         -3.57194506e-02,  5.48211439e-03, -4.20819037e-02,\n",
+       "         -6.91775531e-02, -4.68807071e-02, -2.04368196e-02,\n",
+       "         -7.96740409e-03, -4.02523689e-02,  4.17781249e-02,\n",
+       "          4.36356068e-02,  3.06162592e-02, -5.80735272e-03,\n",
+       "         -6.87424913e-02, -2.30544321e-02, -1.77533217e-02,\n",
+       "          4.34999391e-02, -3.46038602e-02, -1.89210270e-02,\n",
+       "          1.38710188e-02,  3.43561848e-03,  2.35419087e-02,\n",
+       "         -7.53269419e-02, -1.99260917e-02, -1.85423978e-02,\n",
+       "          4.96254228e-02, -3.92658338e-02, -5.79622574e-02,\n",
+       "         -3.79524985e-03,  9.25217420e-02, -2.63498146e-02,\n",
+       "          2.34880466e-02, -2.77919658e-02, -2.81158704e-02,\n",
+       "         -2.81743868e-03, -3.06442287e-03,  1.39935119e-02,\n",
+       "         -2.22314652e-02,  1.78181119e-02, -5.11167161e-02,\n",
+       "          5.22634834e-02,  1.61566231e-02,  1.51933618e-02,\n",
+       "          4.58226353e-02,  3.91568318e-02,  6.27122307e-03,\n",
+       "         -8.48326907e-02,  9.13377269e-04, -2.39658598e-02,\n",
+       "         -9.76198465e-02,  4.78276014e-02,  1.37179475e-02,\n",
+       "         -1.70633495e-02,  3.37862559e-02,  5.63354716e-02,\n",
+       "         -4.87803593e-02, -2.12664977e-02,  3.39700170e-02,\n",
+       "         -7.12973326e-02, -4.65867445e-02, -4.03015763e-02,\n",
+       "         -1.46020763e-02, -6.11457266e-02, -6.81675831e-03,\n",
+       "          2.78246105e-02,  1.97815076e-02, -5.36280349e-02,\n",
+       "          3.97047102e-02,  3.16852219e-02,  6.53064325e-02,\n",
+       "         -3.85018736e-02, -3.90547663e-02, -2.58119088e-02,\n",
+       "         -6.77648485e-02,  1.20237274e-02,  1.66813820e-03,\n",
+       "          2.10841205e-02,  4.55983449e-03, -8.95991176e-03,\n",
+       "          2.58601289e-02,  3.04879621e-02,  1.68300967e-03,\n",
+       "          7.33899474e-02, -5.74620292e-02,  8.57068077e-02,\n",
+       "         -3.14489529e-02, -1.13329887e-01, -6.64987192e-02,\n",
+       "          4.40789014e-02,  3.34111042e-02,  5.00349589e-02,\n",
+       "          1.98191963e-02,  2.44272011e-03,  3.43020670e-02,\n",
+       "          3.70971039e-02,  8.50582346e-02,  6.07690366e-04,\n",
+       "         -3.24727856e-02, -2.76250970e-02,  5.62498607e-02,\n",
+       "          1.89941358e-02,  2.20730174e-02, -3.57625820e-02,\n",
+       "         -1.94256306e-02, -4.60573286e-02,  6.02688082e-03,\n",
+       "          7.10993782e-02, -1.17717367e-02, -2.99733761e-03,\n",
+       "         -1.81765743e-02,  2.56336816e-02, -1.18914256e-02,\n",
+       "          1.34878103e-02,  6.07770160e-02,  5.09784445e-02,\n",
+       "          3.37069929e-02,  1.06389611e-03,  5.86453527e-02,\n",
+       "         -1.19625563e-02, -1.85132138e-02,  6.17286116e-02,\n",
+       "         -2.54702047e-02, -9.64134582e-04,  1.18775619e-02,\n",
+       "         -2.10992470e-02, -4.90346141e-02, -8.12935755e-02,\n",
+       "          1.81826055e-02,  4.67122160e-02,  3.45628187e-02,\n",
+       "          9.53527633e-03, -3.28702554e-02, -2.30024010e-03,\n",
+       "          2.82925870e-02,  4.05688249e-02,  5.09545431e-02,\n",
+       "         -5.32508828e-02,  2.74801292e-02,  2.54652761e-02,\n",
+       "          7.23629966e-02, -4.45753224e-02, -4.40317020e-02,\n",
+       "         -4.02804185e-03, -2.62956973e-02,  4.69162269e-03,\n",
+       "         -6.42226115e-02,  1.05580464e-02,  5.25754765e-02,\n",
+       "          1.18703395e-02, -5.83263636e-02, -6.50433078e-02,\n",
+       "         -6.51969761e-02,  1.08043998e-01, -8.48245099e-02,\n",
+       "          4.63470891e-02, -3.78717333e-02, -9.34313890e-03,\n",
+       "          2.48650983e-02,  3.46122272e-02, -2.51065418e-02,\n",
+       "          7.80035183e-02, -4.14583236e-02,  1.45787105e-01,\n",
+       "          3.42912935e-02, -4.51493496e-03,  9.26982388e-02,\n",
+       "         -2.24902797e-02,  7.42177367e-02,  5.25562372e-03,\n",
+       "         -7.83744827e-03, -3.80197801e-02,  3.25102173e-02,\n",
+       "          2.05994863e-02, -2.05218773e-02, -3.87785658e-02,\n",
+       "         -4.19909172e-02,  5.02108149e-02, -1.65543836e-02,\n",
+       "         -1.48146944e-02,  2.64483038e-02, -3.26955840e-02,\n",
+       "         -5.24761751e-02, -7.35605657e-02,  1.79142244e-02,\n",
+       "         -5.06768636e-02, -6.45268112e-02, -4.11018394e-02,\n",
+       "         -7.79582709e-02, -1.09854028e-01, -6.88536242e-02,\n",
+       "          9.46192071e-04, -4.49999087e-02, -4.41652164e-02,\n",
+       "         -3.09335385e-02,  5.58951497e-02, -5.49819088e-03,\n",
+       "         -4.12210189e-02, -7.97595654e-04, -3.00288983e-02,\n",
+       "          2.08651600e-03, -6.94596767e-03, -1.55594936e-02,\n",
+       "         -3.18099149e-02,  3.94263677e-02,  2.60665361e-02,\n",
+       "         -4.68600448e-03, -5.00922166e-02, -5.88363875e-03,\n",
+       "          3.21319699e-02,  1.34193012e-02, -2.79054698e-02,\n",
+       "          1.15205105e-02,  2.85111573e-02,  5.84963933e-02,\n",
+       "         -1.38288811e-02,  2.05921400e-02,  1.69644970e-02,\n",
+       "          9.87709165e-02, -1.80511121e-02, -6.85080290e-02,\n",
+       "          1.16170542e-02, -4.92191464e-02, -5.07347099e-02,\n",
+       "          4.53212857e-02,  3.63851599e-02, -4.92892675e-02,\n",
+       "          2.39018518e-02, -5.10216653e-02,  6.42023142e-03,\n",
+       "         -4.15114202e-02,  5.59456199e-02, -2.56416533e-04,\n",
+       "         -2.29334142e-02, -1.97030157e-02,  5.86520582e-02,\n",
+       "          4.09364477e-02,  5.32276258e-02,  1.10956021e-02,\n",
+       "          1.05157951e-02,  3.80531102e-02,  1.87128838e-02,\n",
+       "         -2.65723150e-02, -3.11078690e-03,  1.62929036e-02,\n",
+       "          7.86611252e-03,  4.17967327e-02, -4.14400063e-02,\n",
+       "         -2.42639910e-02,  2.71045454e-02,  1.94637571e-03,\n",
+       "          7.57017434e-02, -2.49228422e-02, -1.83430351e-02,\n",
+       "         -8.76706280e-03,  1.31595498e-02,  8.49773921e-03,\n",
+       "          7.13431882e-03, -6.06041737e-02, -2.94159241e-02,\n",
+       "          1.21186441e-03, -5.64016663e-02, -4.70226556e-02,\n",
+       "          2.22310759e-02, -1.23858340e-02,  5.27384356e-02,\n",
+       "          1.35284707e-01, -2.95798071e-02,  5.18730655e-02,\n",
+       "          1.99823510e-02,  7.79466927e-02,  4.17388305e-02,\n",
+       "         -6.08139671e-02, -1.44975651e-02,  6.91497028e-02,\n",
+       "          6.08674400e-02, -1.13314260e-02, -2.08600834e-02,\n",
+       "          1.21691331e-01,  5.31837810e-03,  2.39634383e-02,\n",
+       "         -2.70790141e-03,  2.06526425e-02, -6.62876070e-02,\n",
+       "          2.73347404e-02,  1.44917779e-02,  8.52030888e-03,\n",
+       "         -4.85425740e-02,  3.06241848e-02, -6.30552769e-02,\n",
+       "         -5.00370860e-02, -5.85099831e-02, -6.29559755e-02,\n",
+       "          3.30918990e-02,  4.32691984e-02,  1.43120158e-02,\n",
+       "         -1.67829730e-02, -5.85091636e-02,  2.64782235e-02,\n",
+       "          4.04990874e-02, -4.31627892e-02,  7.90242851e-02,\n",
+       "         -7.38972332e-04,  2.14789230e-02,  3.84167098e-02,\n",
+       "         -3.60408574e-02, -4.64225486e-02,  3.65561657e-02,\n",
+       "          5.47892936e-02,  3.41769084e-02, -3.45393345e-02,\n",
+       "         -3.33624445e-02, -8.15069526e-02, -9.59468633e-02,\n",
+       "         -5.18003628e-02,  1.66480038e-02,  3.88517976e-02,\n",
+       "          2.17260662e-02, -3.50777321e-02,  2.63384916e-02,\n",
+       "          1.91925745e-02,  1.36948647e-02,  1.13856699e-02,\n",
+       "          1.65045131e-02,  8.85744579e-03,  2.92053353e-02,\n",
+       "          2.34228577e-02, -4.55974601e-02, -6.96334839e-02,\n",
+       "         -3.95567715e-03, -1.37198465e-02, -1.55714974e-02,\n",
+       "          1.48482807e-02, -6.16536997e-02,  3.16272974e-02,\n",
+       "         -2.48239730e-02,  4.44777533e-02, -3.17352302e-02,\n",
+       "          8.45155045e-02,  5.05134426e-02, -1.85486600e-02,\n",
+       "         -2.06254236e-02, -2.02201679e-02,  4.19649109e-02,\n",
+       "         -5.04463539e-02,  1.54268146e-02,  3.95381339e-02,\n",
+       "         -3.55402268e-02,  4.63134348e-02,  2.89207809e-02,\n",
+       "          6.43105805e-02,  5.86444745e-03,  1.05195520e-02,\n",
+       "         -4.18538563e-02,  2.22442895e-02, -1.13788191e-02,\n",
+       "          1.18962117e-02,  8.24890751e-03, -2.99688764e-02,\n",
+       "          4.26845066e-02,  7.83813521e-02,  5.04909791e-02,\n",
+       "          4.65555526e-02,  2.56126244e-02, -6.80516884e-02,\n",
+       "          2.23879865e-03,  1.63695251e-03,  6.15016976e-03,\n",
+       "          2.66363937e-03, -9.22255144e-02,  2.50975997e-03,\n",
+       "          2.35248134e-02,  3.51404548e-02,  4.95309643e-02,\n",
+       "          5.89803346e-02, -9.39152539e-02, -1.53586250e-02,\n",
+       "         -3.88544351e-02,  1.25526384e-01,  7.03636929e-02,\n",
+       "         -5.41905575e-02,  2.54494902e-02, -1.25406712e-01,\n",
+       "         -2.20944062e-02,  3.31783365e-03,  9.07449704e-03,\n",
+       "         -7.06228837e-02,  8.18130374e-03, -2.93489117e-02,\n",
+       "          6.67651650e-03, -6.41846731e-02,  2.50646621e-02,\n",
+       "         -5.01409359e-02, -7.97091890e-03, -3.58779612e-03,\n",
+       "          2.17500282e-03,  2.81046256e-02, -2.20698584e-02,\n",
+       "          4.91329096e-02, -3.38259749e-02, -3.45768519e-02,\n",
+       "          6.94174543e-02, -3.09852213e-02]], dtype=float32)}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
